<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:padding="16dp"
    tools:context=".ui.auth.LoginFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:textSize="35sp"
            android:text="@string/log_in"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik"
            android:text="@string/sign_in_to_your_account"
            android:layout_marginBottom="20dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="-1dp"
            android:hint="@string/email_address"
            android:layout_marginBottom="10dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_name"
                android:layout_width="match_parent"
                android:fontFamily="@font/rubik"
                android:inputType="text"
                app:validateEmpty="@{true}"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="-1dp"
            android:hint="@string/password"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:fontFamily="@font/rubik"
                app:validateMinLength="@{6}"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:fontFamily="@font/rubik"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_gravity="end" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/continue_to_login"
                android:textAllCaps="false"
                android:fontFamily="@font/rubik"
                android:backgroundTint="@color/black"
                app:shapeAppearance="@style/ShapeAppearance.MyApp.SmallComponent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:alpha="0.4"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.64"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/GoToSignUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/create_an_account"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:shapeAppearance="@style/ShapeAppearance.MyApp.SmallComponent"
            app:strokeColor="@color/black"
            android:fontFamily="@font/rubik"
            android:textColor="@color/black"
            android:textAllCaps="false" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>

</layout>