<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"
        tools:context=".ui.auth.SignupCategory">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            app:elevation="0dp"
            android:backgroundTint="#00FFCE00"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_category"
                    android:textSize="25sp"
                    android:fontFamily="@font/rubik_medium"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/rubik"
                    android:layout_marginBottom="20dp"
                    android:text="@string/choose_category_of_product_you_sell" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/product_category_item"/>

                <Button
                    android:id="@+id/signup"
                    android:layout_marginTop="60dp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/rubik"
                    android:layout_gravity="bottom"
                    android:backgroundTint="@color/black"
                    android:text="@string/complete_signup" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>