<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"
        tools:context=".ui.auth.SignupFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:textSize="35sp"
                android:text="@string/sign_up"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/rubik"
                android:text="Create an account if you dont have one"
                android:layout_marginBottom="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/firstname"
                android:layout_marginBottom="10dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/rubik"
                    app:validateType='@{"username"}'
                    app:validateEmpty="@{true}"
                    android:inputType="textPersonName"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/last_name"
                android:layout_marginBottom="10dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/rubik"
                    app:validateType='@{"username"}'
                    app:validateEmpty="@{true}"
                    android:inputType="textPersonName"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxBackgroundColor="@color/white"
                android:hint="Username"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_marginBottom="10dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/rubik"
                    app:validateEmpty="@{true}"
                    android:inputType="textPersonName"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/phone_number"
                android:layout_marginBottom="10dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_no"
                    android:layout_width="match_parent"
                    android:inputType="phone"
                    app:validateMaxLength="@{11}"
                    app:validateMinLength="@{11}"
                    android:fontFamily="@font/rubik"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/email_address"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                android:layout_marginBottom="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:passwordToggleTint="@color/black"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    app:validateType='@{"email"}'
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/rubik"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>


            <Spinner
                android:layout_marginBottom="10dp"
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:background="@drawable/spinnerbox"
                android:fontFamily="@font/rubik"
                app:shapeAppearance="@style/ShapeAppearance.MyApp.SmallComponent"
                android:entries="@array/Gender"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                android:layout_marginBottom="10dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    app:validateMinLength="@{6}"
                    android:inputType="textPassword"
                    android:fontFamily="@font/rubik"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/Next"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/rubik"
                    android:text="@string/next"
                    app:shapeAppearance="@style/ShapeAppearance.MyApp.SmallComponent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:alpha="0.4"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/Next"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.64"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/go_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textAllCaps="false"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="Got an account? Log in" />

        </LinearLayout>

    </ScrollView>
</layout>